kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marvin
  labels:
    app: marvin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marvin
  template:
    metadata:
      labels:
        app: marvin
    spec:
      serviceAccountName: marvin
      containers:
      - name: marvin
        image: gcr.io/prefect-marvin/marvin:${IMAGE_TAG}
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
