kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marvin-deployment
  labels:
    app: marvin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marvin
  template:
    metadata:
      labels:
        app: marvin
    spec:
      containers:
      - name: marvin
        image: gcr.io/prefect-marvin/marvin:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
