kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: marvin
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: marvin
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
